# AuxiliarCustomWidgets

./: AuxiliarCustomWidgets.pri  ButtonLink.cpp  ButtonLink.hpp  CMakeLists.txt  ClickableFrame.cpp  ClickableFrame.h  Colors.h  FileDiffHighlighter.cpp  FileDiffView.cpp  LineNumberArea.cpp  resources.qrc
include/: DiffHelper.h  FileDiffHighlighter.h  FileDiffView.h
src/: ButtonLink.cpp  CheckBox.cpp  ClickableFrame.cpp  FileDiffHighlighter.cpp  FileDiffView.cpp  LineNumberArea.cpp
